updated grid added height so grid would stop collapsing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,10 +86,10 @@ header nav ul li a:hover {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 45px;
     color: var(--secondary-color);
-    text-shadow: 0 0 20px rgba(0,0,0,1.0);
+    text-shadow: 0 0 10px rgba(0,0,0,1.0);
     margin-right: 30px;
     margin-bottom: 10px;
-    border-bottom: 7px solid;
+    border-bottom: 6px double;
 }
 
 .section-title {
@@ -182,6 +182,89 @@ header nav ul li a:hover {
     border-bottom: ridge;
 }
 
+/* Work Grid */
+.work-grid-container {
+    width: 100%;
+    height: 450px;
+    display: grid;
+    grid-template-columns:repeat(9, 1fr);
+    grid-template-rows:repeat(6, 1fr);
+    color: var(--secondary-color);
+    font-size: 1.2rem;
+    row-gap: 10px;
+    column-gap: 10px;
+}
 
+/* Work Options Begin */
+.run {
+    background-image: url("../images/runbuddy.png");
+    background-size: cover;
+    background-position: center;
+    grid-row: 1 / span 3;
+    grid-column: 1 / span 5;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
 
+.horiseon {
+    background-image: url("../images/horiseon.png");
+    background-size: cover;
+    background-position: center;
+    grid-row: 1 / span 2;
+    grid-column: 6 / span 3;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end; 
+}
 
+.pastel {
+    background-image: url("../images/pastel.jpg");
+    background-size: cover;
+    background-position: center;
+    grid-row: 3 / span 4;
+    grid-column: 6 / span 3;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.calculator {
+    background-image: url("../images/calculator.jpg");
+    background-size: cover;
+    background-position: center;
+    grid-column: 4 / span 2;
+    grid-row: 4 / span 3;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.led {
+    background-image: url("../images/led.jpg");
+    background-size: cover;
+    background-position: center;
+    grid-column: 1 / span 3;
+    grid-row: 4 / span 3;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+/* Grid Boxes/Text/Border, Universal */
+h4 {
+    font-size: 15px;
+}
+
+.grid-text {
+    margin-bottom: 20px;
+    background-color: var(--third-color);
+}
+
+.grid-item {
+    border: 10px solid var(--third-color);
+}
+
+.grid-item:hover {
+    opacity: .8 ;
+}
